# journaliser-cli

./: Cargo.toml  README.md  move-to-local.sh
src/: main.rs
