[package]
name = "journaliser-cli-rust"
version = "0.3.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = {version = "0.2.*", features = ["full"] }
serde = "1.0.133"
serde_json = "1.0"
serde_derive = "1.0.133"
home = "0.5.3"
